# ebayKleinanzeigenAlert

./: .dockerignore  .pdm-python  BOT_README.md  CLOUD_DEPLOYMENT.md  Dockerfile  Procfile  QUICK_START_CLOUD.md  README1.md  SETUP_INSTRUCTIONS.md  cloudbuild.yaml  deploy.sh  docker-compose.yml  init_data_dir.py  pyproject.toml  railway.json  requirements.txt  setup.py  test_bot.py
ebAlert/: bot_main.py  main.py
ebAlert/core/: config.py
ebAlert/crud/: user.py
ebAlert/ebayscrapping/: ebayclass.py
ebAlert/models/: user_models.py
ebAlert/telegram/: bot.py  telegram_bot.py
